plugins {
  id 'java'
  id 'jvm-test-suite'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

repositories {
  mavenCentral()
}

testing {
  suites {
    test {
      useJUnitJupiter()
      dependencies {
        implementation libs.assertj
      }
    }
  }
}

tasks.withType(Test).configureEach {
  dependsOn(':common:createTestIndex')

  /*
   * Required for Lucene off-heap memory access and optional SIMD optimizations
   * via the JDK Vector API.
   */
  jvmArgs += ["--enable-native-access=ALL-UNNAMED", "--add-modules", "jdk.incubator.vector"]
}

tasks.withType(JavaExec).configureEach {
  jvmArgs += ["--enable-native-access=ALL-UNNAMED", "--add-modules", "jdk.incubator.vector"]
}

dependencies {
  implementation(libs.bundles.lucene)
}
